# tc-evaluator

./: .envrc  .gitignore  CMakeLists.txt  LICENSE  README.md  cmp.sh  dbg.sh  profile.sh  run.sh  shell.nix  tc-comp.cabal  test.sh  test.txt  tree.txt  valgrind.sh  vm.shrubble
benchmark/: benchmark.c
examples/: main.c
include/: shrubble.h  tceval.h
src/: Eval.hs  Global.hs  Inet.hs  Main.hs  Tree.hs  array.c  array.h  debug.c  debug.h  global.h  node.c  node.h  runtime.c  shrubble.c  tceval.c  tree.c  tree.h  vm.c  vm.h
src/bintree/: array.c  array.h  buffer.c  buffer.h  debug.c  debug.h  global.h  main.c  main.h  node.c  node.h  reduction.c  reduction.h  runtime.c  runtime.h  stack.c  stack.h  tree.c  tree.h  vm.c  vm.h
src/bintree/test/: array.c  node.c  test.c  test.h  tree.c
src/compiler/: Inet.hs  Main.hs  Tree.hs
src/inet/: runtime.c
src/test/: node.c  tree.c  vm.c
test/: array.c  node.c  test.h  tree.c  vm.c
