cabal-version:      3.0
name:               tc-comp
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             spikeyarmaku
maintainer:         spikeyarmaku@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -O3

executable tc-comp
    import:           warnings
    main-is:          Main.hs
    other-modules:    Tree, Eval, Inet, Global
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      QuickCheck,
                      process
    hs-source-dirs:   src
    default-language: Haskell2010
